First attempt with merge

--- a/code/2018-8-24_multiclassification.ipynb
+++ b/code/2018-8-24_multiclassification.ipynb
@@ -19,7 +19,8 @@
    "source": [
     "import pickle\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -37,19 +38,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              0                                             1         2  \\\n",
+      "0       VT46777                                             1      dkik   \n",
+      "1       VT46777                                             1  MEMB002A   \n",
+      "2       VT46777                                             1  MEMB002C   \n",
+      "3       VT46777                                             1  MEMB002D   \n",
+      "4       VT46777                                             1  MEMB002E   \n",
+      "5       VT46777                                             1  MEMB003B   \n",
+      "6       VT46777                                             1  MEMB003C   \n",
+      "7       VT46777                                             1  MEMB003D   \n",
+      "8       VT46777                                             1  MEMB003F   \n",
+      "9       VT46777                                             1  MEMB004A   \n",
+      "10      VT46777                                             1  MEMB004B   \n",
+      "11      VT46777                                             1  MEMB006B   \n",
+      "12      VT46777                                             1  MEMB007C   \n",
+      "13      VT46777                                             1  MEMB002B   \n",
+      "14      VT46777                                             1  MEMB002F   \n",
+      "15      VT46777                                             1  MEMB003A   \n",
+      "16      VT46777                                             1  MEMB004E   \n",
+      "17      VT46777                                             1  MEMB005B   \n",
+      "18      VT46777                                             1  MEMB005D   \n",
+      "19      VT46777                                             1  MEMB006A   \n",
+      "20      VT46777                                             1  MEMB006C   \n",
+      "21      VT46777                                             1  MEMB007B   \n",
+      "22      VT46777                                             1  MEMB007D   \n",
+      "23      VT46777                                             1  MEMB008C   \n",
+      "24      VT38790                                             0  MEMB002D   \n",
+      "25      VT38790                                             0  MEMB002E   \n",
+      "26      VT38790                                             0  MEMB003C   \n",
+      "27      VT38790                                             0  MEMB003D   \n",
+      "28      VT38790                                             0  MEMB003F   \n",
+      "29      VT38790                                             0  MEMB004B   \n",
+      "...         ...                                           ...       ...   \n",
+      "15851  \"VT9837\"                \"stag11_12stag13_14stg15_16\"\\n       NaN   \n",
+      "15852  \"VT9838\"                                          NA\\n       NaN   \n",
+      "15853  \"VT9839\"                   \"stg4_6stag13_14stg15_16\"\\n       NaN   \n",
+      "15854  \"VT9840\"                         \"stag13_14stg15_16\"\\n       NaN   \n",
+      "15855  \"VT9841\"                \"stag11_12stag13_14stg15_16\"\\n       NaN   \n",
+      "15856  \"VT9842\"                         \"stag9_10stag11_12\"\\n       NaN   \n",
+      "15857  \"VT9843\"  \"stg7_8stag9_10stag11_12stag13_14stg15_16\"\\n       NaN   \n",
+      "15858  \"VT9846\"                \"stag11_12stag13_14stg15_16\"\\n       NaN   \n",
+      "15859  \"VT9847\"        \"stag9_10stag11_12stag13_14stg15_16\"\\n       NaN   \n",
+      "15860  \"VT9848\"                                          NA\\n       NaN   \n",
+      "15861  \"VT9849\"                        \"stag11_12stag13_14\"\\n       NaN   \n",
+      "15862  \"VT9850\"        \"stag9_10stag11_12stag13_14stg15_16\"\\n       NaN   \n",
+      "15863  \"VT9851\"        \"stag9_10stag11_12stag13_14stg15_16\"\\n       NaN   \n",
+      "15864  \"VT9853\"        \"stag9_10stag11_12stag13_14stg15_16\"\\n       NaN   \n",
+      "15865  \"VT9855\"                         \"stag13_14stg15_16\"\\n       NaN   \n",
+      "15866  \"VT9857\"                                          NA\\n       NaN   \n",
+      "15867  \"VT9858\"                        \"stag11_12stag13_14\"\\n       NaN   \n",
+      "15868  \"VT9869\"                                          NA\\n       NaN   \n",
+      "15869  \"VT9943\"                                          NA\\n       NaN   \n",
+      "15870  \"VT9944\"                         \"stag13_14stg15_16\"\\n       NaN   \n",
+      "15871  \"VT9945\"                \"stag9_10stag11_12stag13_14\"\\n       NaN   \n",
+      "15872  \"VT9946\"                \"stag11_12stag13_14stg15_16\"\\n       NaN   \n",
+      "15873  \"VT9947\"                                          NA\\n       NaN   \n",
+      "15874  \"VT9949\"                \"stag11_12stag13_14stg15_16\"\\n       NaN   \n",
+      "15875  \"VT9950\"                                          NA\\n       NaN   \n",
+      "15876  \"VT9951\"                         \"stag13_14stg15_16\"\\n       NaN   \n",
+      "15877  \"VT9978\"                         \"stag13_14stg15_16\"\\n       NaN   \n",
+      "15878  \"VT9983\"                         \"stag13_14stg15_16\"\\n       NaN   \n",
+      "15879  \"VT9998\"                                          NA\\n       NaN   \n",
+      "15880  \"VT9999\"                                          NA\\n       NaN   \n",
+      "\n",
+      "                                                       3  \n",
+      "0      [[0, 0, 1, 0, -3.78664207458, -4.3548426628112...  \n",
+      "1      [[0, 0, 1, 0, -3.78664207458, -4.3548426628112...  \n",
+      "2      [[0, 0, 1, 0, -3.78664207458, -4.3548426628112...  \n",
+      "3      [[0, 0, 1, 0, -3.78664207458, -4.3548426628112...  \n",
+      "4      [[1, 0, 0, 0, -5.87112426758, -1.9784668684005...  \n",
+      "5      [[0, 0, 1, 0, -3.78664207458, -4.3548426628112...  \n",
+      "6      [[0, 0, 1, 0, -3.78664207458, -4.3548426628112...  \n",
+      "7      [[0, 0, 1, 0, -3.78664207458, -4.3548426628112...  \n",
+      "8      [[0, 0, 1, 0, -3.78664207458, -4.3548426628112...  \n",
+      "9      [[0, 0, 1, 0, -3.78664207458, -4.3548426628112...  \n",
+      "10     [[1, 0, 0, 0, -10.2445821762, -4.3003950119018...  \n",
+      "11     [[0, 0, 1, 0, -3.78664207458, -4.3548426628112...  \n",
+      "12     [[0, 0, 1, 0, -3.78664207458, -4.3548426628112...  \n",
+      "13     [[0, 1, 0, 0, -3.78664207458, -4.3548426628112...  \n",
+      "14     [[0, 1, 0, 0, -3.78664207458, -4.3548426628112...  \n",
+      "15     [[0, 1, 0, 0, -3.78664207458, -4.3548426628112...  \n",
+      "16     [[0, 1, 0, 0, -3.78664207458, -4.3548426628112...  \n",
+      "17     [[0, 0, 0, 1, -10.2445821762, -4.3003950119018...  \n",
+      "18     [[0, 1, 0, 0, -3.78664207458, -4.3548426628112...  \n",
+      "19     [[0, 1, 0, 0, -3.78664207458, -4.3548426628112...  \n",
+      "20     [[0, 1, 0, 0, -3.78664207458, -4.3548426628112...  \n",
+      "21     [[0, 1, 0, 0, -3.78664207458, -4.3548426628112...  \n",
+      "22     [[0, 1, 0, 0, -3.78664207458, -4.3548426628112...  \n",
+      "23     [[0, 1, 0, 0, -3.78664207458, -4.3548426628112...  \n",
+      "24     [[0, 0, 1, 0, -3.78664207458, -1.7698801755905...  \n",
+      "25     [[0, 0, 1, 0, -3.78664207458, -1.7698801755905...  \n",
+      "26     [[0, 0, 1, 0, -3.78664207458, -1.7698801755905...  \n",
+      "27     [[1, 0, 0, 0, -10.2445821762, -1.7154324054718...  \n",
+      "28     [[1, 0, 0, 0, -10.2445821762, -4.3003950119018...  \n",
+      "29     [[1, 0, 0, 0, -10.2445821762, -4.3003950119018...  \n",
+      "...                                                  ...  \n",
+      "15851                                                NaN  \n",
+      "15852                                                NaN  \n",
+      "15853                                                NaN  \n",
+      "15854                                                NaN  \n",
+      "15855                                                NaN  \n",
+      "15856                                                NaN  \n",
+      "15857                                                NaN  \n",
+      "15858                                                NaN  \n",
+      "15859                                                NaN  \n",
+      "15860                                                NaN  \n",
+      "15861                                                NaN  \n",
+      "15862                                                NaN  \n",
+      "15863                                                NaN  \n",
+      "15864                                                NaN  \n",
+      "15865                                                NaN  \n",
+      "15866                                                NaN  \n",
+      "15867                                                NaN  \n",
+      "15868                                                NaN  \n",
+      "15869                                                NaN  \n",
+      "15870                                                NaN  \n",
+      "15871                                                NaN  \n",
+      "15872                                                NaN  \n",
+      "15873                                                NaN  \n",
+      "15874                                                NaN  \n",
+      "15875                                                NaN  \n",
+      "15876                                                NaN  \n",
+      "15877                                                NaN  \n",
+      "15878                                                NaN  \n",
+      "15879                                                NaN  \n",
+      "15880                                                NaN  \n",
+      "\n",
+      "[15881 rows x 4 columns]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'seq_record_list2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-27ccf5a67dfb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mseq_record_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mseq_record_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexpression\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhow\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'outer'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseq_record_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseq_record_list2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'seq_record_list2' is not defined"
+     ]
+    }
+   ],
    "source": [
     "with open(real_buffer_path, \"rb\") as buff:\n",
     "    seq_record_list = pickle.load(buff)\n",
-    "seq_record_list2 = sorted(seq_record_list, key = lambda x:int(x[0].split('|')[0][2:]))\n",
+    "expression = []\n",
     "with open(classes_path, encoding='utf-8') as csv_file:\n",
     "    for a_line in csv_file:\n",
     "        curr_line = a_line.split(',')\n",
     "        stage = curr_line[3]\n",
     "        vtid = curr_line[1]\n",
-    "print(seq_record_list2[0][0].split('|')[0][2:])\n",
+    "        if vtid != '\"VTID\"':\n",
+    "            expression.append([vtid, stage])\n",
+    "for a in range(0,len(seq_record_list)):\n",
+    "    seq_record_list[a][0] = seq_record_list[a][0].split('|')[0]\n",
+    "seq_record_list = pd.DataFrame(seq_record_list)\n",
+    "expression = pd.DataFrame(expression)\n",
+    "seq_record_list = seq_record_list.merge(expression, how='outer')\n",
+    "print(seq_record_list)\n",
     "len(seq_record_list2)"
    ]
   },
