Fixed Typo, documented C-stat,

--- a/code/utility/FDR_and_C_stats.ipynb
+++ b/code/utility/FDR_and_C_stats.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Before calculate the FDR and C-statistics, we need to generate or import the input and the correct output**"
+    "**Before we calculate the FDR and C-statistics, we need to generate or import the input data and the correct labels**"
    ]
   },
   {
@@ -84,9 +84,9 @@
     "# False Discovery Rate\n",
     "This cell uses the model to make predictions on our data.\n",
     "\n",
-    "Then it iterates through the results and the real labels and compares them to check for False Positives(FP) and True Negatives(TN).\n",
+    "Then it iterates through the results and the real labels and compares them to check for False Positives(FP) and True Positives(TP).\n",
     "\n",
-    "Then it uses the formula to calculate the False Positve Rate (FPR)"
+    "Then it uses the formula to calculate the False Discovery Rate (FDR)"
    ]
   },
   {
@@ -136,7 +136,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# C-statistics"
+    "# C-statistics\n",
+    "This cell iterates through the data using an incrementing threshold value to generate an ROC Curve /n then uses a Riemann sum (trapezoidal) to generate the C-statistic"
    ]
   },
   {
@@ -205,9 +206,7 @@
     "    \n",
     "    discovery_percentage += 0.05\n",
     "    \n",
-    "def trapezoid_area(b1,b2,h):\n",
-    "    return 0.5 * h * (b1 + b2)\n",
-    "\n",
+    
     "riemann = 0.0\n",
     "for i in range(0,len(sensitivities) - 1):\n",
     "    riemann += 0.5 * (sensitivities[i]+sensitivities[i+1]) * (false_positive_rates[i]-false_positive_rates[i+1])\n",
