--- a/code/utility/FDR_and_C_stats.ipynb
+++ b/code/utility/FDR_and_C_stats.ipynb
@@ -137,7 +137,7 @@
    "metadata": {},
    "source": [
     "# C-statistics\n",
-    "This cell iterates through the data using an incrementing threshold value to generate an ROC Curve /n then uses a Riemann sum (trapezoidal) to generate the C-statistic"
+    "This cell iterates through the data using an incrementing threshold value to generate an ROC Curve then uses a Riemann sum (trapezoidal) to generate the C-statistic"
    ]
   },
   {
