--- a/code/utility/2018-07-29_pointing_out_a_fault_in_previous_experiments.ipynb
+++ b/code/utility/2018-07-29_pointing_out_a_fault_in_previous_experiments.ipynb
@@ -1,82 +1,100 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/matplotlib/__init__.py:1067: UserWarning: Duplicate key in file \"/home/ubuntu/.config/matplotlib/matplotlibrc\", line #2\n",
-      "  (fname, cnt))\n",
-      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/matplotlib/__init__.py:1067: UserWarning: Duplicate key in file \"/home/ubuntu/.config/matplotlib/matplotlibrc\", line #3\n",
-      "  (fname, cnt))\n"
-     ]
-    }
-   ],
    "source": [
-    "import pickle\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "**Date**: 2018-07-29\n",
+    "\n",
+    "**Authors**: Yichen Fang\n",
+    "\n",
+    "**Purpose**: Pointing out a fault in previous experiments, and testing the old neural network on new correct one-hot encoded output with motif attached\n",
+    "\n",
+    "**Background**:\n",
+    "- It was discovered that the old one-hot encoded outputs with motif attached are incorrect. There was a serious fault in the old motif processing file (for some reason, a level of indentation of a block of code was wrong), causing faulty outputs to be produced. This error caused: for each section, the 24 sequences were all assigned the motifs of the first sequence (i.e. the motifs assigned for all 23 sequences other than the first are not correct). Hence, the results are not valid due to this fault.\n",
+    "- As a result, the results based on those incorrect outputs in previous experiments are no longer valid.\n",
+    "- This experiement serves the purpose to test the effect of old RNN model on the new correct one-hot encoded outputs.\n",
+    "\n",
+    "**Experiment**:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the real/random sequences buffer path, length to curtail all sequences to, and the number of motifs:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "real_buffer_path = \"/home/ubuntu/newOutput/10_percent/random_0.1_instance_7.txt\"\n",
-    "random_buffer_path = \"/home/ubuntu/newOutput/random_sequences/random_sequence_buffer.txt\"\n",
-    "classes_path = \"/home/ubuntu/data/team_neural_network/data/input/classification_table3_21Aug2018.csv\"\n",
+    "random_buffer_path = \"/home/ubuntu/formatted/random_sequences/random_sequence_buffer.txt\"\n",
     "curtail_len = 3000\n",
     "motif_num = 3"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "with open(real_buffer_path, \"rb\") as buff:\n",
-    "    seq_record_list = pickle.load(buff)\n",
-    "expression = []\n",
-    "with open(classes_path, encoding='utf-8') as csv_file:\n",
-    "    for a_line in csv_file:\n",
-    "        curr_line = a_line.split(',')\n",
-    "        stage = curr_line[3]\n",
-    "        vtid = curr_line[1]\n",
-    "        if vtid != '\"VTID\"':\n",
-    "            expression.append([vtid, stage])\n",
-    "for a in range(0,len(seq_record_list)):\n",
-    "    seq_record_list[a][0] = seq_record_list[a][0].split('|')[0][2:]    \n",
-    "for a in range(0, len(expression)):\n",
-    "    expression[a][0] = expression[a][0][3:-1]\n",
-    "seq_record_list = pd.DataFrame(seq_record_list)\n",
-    "seq_record_list.columns = ['vtid', 1, 2, 3]\n",
-    "expression = pd.DataFrame(expression)\n",
-    "expression.columns = ['vtid', 1]\n",
-    "seq_record_list = seq_record_list.merge(expression, on='vtid')\n",
-    "seq_record_list = seq_record_list.values.tolist()"
+    "Load the `pickle` buffered list:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8088"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open(real_buffer_path, \"rb\") as buff:\n",
+    "    seq_record_list = pickle.load(buff)\n",
+    "len(seq_record_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cell randomly shuffles the sequences. The shuffling ensures that, for each DNA section (each consists of 24 segments), there are definitely some sequences being allocated to the training data. In this way, the final trained model would be able to learn all the characteristics from the data we have."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of sequences in training/validation set are: 7051\n",
-      "Number of sequences in testing set are: 1037\n"
+      "Number of sequences in training/validation set are: 7102\n",
+      "Number of sequences in testing set are: 986\n"
      ]
     }
    ],
@@ -108,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,8 +135,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cell transforms the data into a format that is recognizable by the neural network model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,11 +178,11 @@
     "    seq_count = 0\n",
     "    while seq_count < training_size:\n",
     "        X_train.append(flatten(curtail(original_list[seq_count][3], length_read, motif_number)))\n",
-    "        y_train.append(original_list[seq_count][4])\n",
+    "        y_train.append(int(original_list[seq_count][1]))\n",
     "        seq_count += 1\n",
     "    while seq_count < (training_size + test_size):\n",
     "        X_test.append(flatten(curtail(original_list[seq_count][3], length_read, motif_number)))\n",
-    "        y_test.append(original_list[seq_count][4])\n",
+    "        y_test.append(int(original_list[seq_count][1]))\n",
     "        seq_count += 1\n",
     "    return X_train, y_train, X_test, y_test\n",
     "\n",
@@ -176,16 +201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(7051, 21000), (7051, 1), (1037, 21000), (1037, 1)]"
+       "[(7102, 21000), (7102, 1), (986, 21000), (986, 1)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,67 +222,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import re"
+    "We run the experiment with four LSTM layers, having 8, 8, 4, 4 units respectively, and 250 epoches:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "y_train_new = [];\n",
-    "for row in y_train:\n",
-    "    a = [0]*64\n",
-    "    count = 0\n",
-    "    if re.search('4_6', row[0]):\n",
-    "        count+=1\n",
-    "    if re.search('7_8', row[0]):\n",
-    "        count+=2\n",
-    "    if re.search('9_10', row[0]):\n",
-    "        count+=4\n",
-    "    if re.search('11_12', row[0]):\n",
-    "        count+=8\n",
-    "    if re.search('13_14', row[0]):\n",
-    "        count+=16\n",
-    "    if re.search('15_16', row[0]):\n",
-    "        count+=32\n",
-    "    a[count] = 1\n",
-    "    y_train_new.append(a)\n",
-    "y_train_new = np.asarray(y_train_new)\n",
-    "y_test_new = [];\n",
-    "for row in y_train:\n",
-    "    a = [0]*64\n",
-    "    count = 0\n",
-    "    if re.search('4_6', row[0]):\n",
-    "        count+=1\n",
-    "    if re.search('7_8', row[0]):\n",
-    "        count+=2\n",
-    "    if re.search('9_10', row[0]):\n",
-    "        count+=4\n",
-    "    if re.search('11_12', row[0]):\n",
-    "        count+=8\n",
-    "    if re.search('13_14', row[0]):\n",
-    "        count+=16\n",
-    "    if re.search('15_16', row[0]):\n",
-    "        count+=32\n",
-    "    a[count] = 1\n",
-    "    y_test_new.append(a)\n",
-    "y_test_new = np.asarray(y_test_new)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'keras'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-4996e9b699fb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSequential\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDense\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mCuDNNLSTM\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mCuDNNGRU\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'keras'"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import Model, Sequential\n",
     "from keras.layers import Dense, CuDNNLSTM, CuDNNGRU"
@@ -265,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,34 +261,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 6345 samples, validate on 706 samples\n",
-      "Epoch 1/5\n",
-      "6345/6345 [==============================] - 109s 17ms/step - loss: 2.5453 - acc: 0.4485 - val_loss: 2.1293 - val_acc: 0.4419\n",
-      "Epoch 2/5\n",
-      "6345/6345 [==============================] - 52s 8ms/step - loss: 2.0714 - acc: 0.4496 - val_loss: 2.0886 - val_acc: 0.4419\n",
-      "Epoch 3/5\n",
-      "6345/6345 [==============================] - 52s 8ms/step - loss: 2.0574 - acc: 0.4496 - val_loss: 2.0834 - val_acc: 0.4419\n",
-      "Epoch 4/5\n",
-      "6345/6345 [==============================] - 52s 8ms/step - loss: 2.0514 - acc: 0.4496 - val_loss: 2.0830 - val_acc: 0.4419\n",
-      "Epoch 5/5\n",
-      "6345/6345 [==============================] - 52s 8ms/step - loss: 2.0512 - acc: 0.4496 - val_loss: 2.0887 - val_acc: 0.4419\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "model.add(CuDNNLSTM(128, input_shape=(curtail_len, motif_num + 4), return_sequences=True))\n",
-    "model.add(CuDNNLSTM(128))\n",
-    "model.add(Dense(64, activation='sigmoid'))\n",
-    "model.compile(optimizer='rmsprop', loss='categorical_crossentropy', metrics=['accuracy'])\n",
-    "history = model.fit(X_train_rnn, y_train_new, epochs=5, batch_size=128, validation_split=0.1)"
+    "model.add(CuDNNLSTM(8, input_shape=(curtail_len, motif_num + 4), return_sequences=True))\n",
+    "model.add(CuDNNLSTM(8, return_sequences=True))\n",
+    "model.add(CuDNNLSTM(4, return_sequences=True))\n",
+    "model.add(CuDNNLSTM(4))\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
+    "model.compile(optimizer='rmsprop', loss='binary_crossentropy', metrics=['acc'])\n",
+    "history = model.fit(X_train_rnn, y_train, epochs=30, batch_size=128, validation_split=0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Result**:\n",
+    "\n",
+    "The following cell **visualize** the training/validation accuracies and losses over each epoch."
    ]
   },
   {
@@ -333,13 +315,21 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Conclusion**:\n",
+    "- From the graphs above, one can conclude that the old RNN model does not actually work satisfiably on the correct data. Hence, we need to overhaul the neural network model."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Environment (conda_tensorflow_p36)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_tensorflow_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
