--- a/code/utility/Generate_words_by_motif.ipynb
+++ b/code/utility/Generate_words_by_motif.ipynb
@@ -4,8 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Author:** Zhanyuan Zhang, Adam Stafford  \n",
-    "**Purpose:** This notebook automates the process of generating words by motif's position weight matrix."
+    "**Authors:** Zhanyuan Zhang, Adam Stafford  \n",
+    "**Purpose:** This notebook automates the process of generating words by a motif's position weight matrix.  \n",
+    "**Usage:** \n",
+    "* Update the jaspar_list if necessary  \n",
+    "* Modify the jaspar_path if necessary\n",
+    "* Set corresponding motif_index\n",
+    "* Run the rest of the notebook, and check if the intermediate outputs match expectations\n",
+    "* Finally, set the buffer_file_path, where the list of words is buffered to"
    ]
   },
   {
@@ -40,11 +46,11 @@
     {
      "data": {
       "text/plain": [
-       "['>MA0447.1\\tgt\\n',\n",
-       " 'A  [    28      0      1     54      0      7      0     55     60      2 ]\\n',\n",
-       " 'C  [     5      0      1      0     53      0      6      3      0     25 ]\\n',\n",
-       " 'G  [    25      0      3      6      0     53      0      1      0      5 ]\\n',\n",
-       " 'T  [     2     60     55      0      7      0     54      1      0     28 ]\\n']"
+       "['>MA0216.2\\tcad\\n',\n",
+       " 'A  [   854    575      0    745   2117      0   2236   2303   2303   1637   1046 ]\\n',\n",
+       " 'C  [     0    341   1481   1475      0     95      0      0      0    115    755 ]\\n',\n",
+       " 'G  [  1143   1387      0      0    186      0      0      0      0    147      0 ]\\n',\n",
+       " 'T  [   306      0    822     83      0   2208     67      0      0    404    502 ]\\n']"
       ]
      },
      "execution_count": 3,
@@ -54,7 +60,8 @@
    ],
    "source": [
     "# Change the index according to the jaspar_list\n",
-    "data = open(jaspar_path + jaspar_list[3], 'r').readlines()\n",
+    "motif_index = 1\n",
+    "data = open(jaspar_path + jaspar_list[motif_index], 'r').readlines()\n",
     "\n",
     "# Extract the name of the motif for buffering\n",
     "motif_name = data[0].split()[1]\n",
@@ -74,10 +81,20 @@
     {
      "data": {
       "text/plain": [
-       "[[28.0, 0.0, 1.0, 54.0, 0.0, 7.0, 0.0, 55.0, 60.0, 2.0],\n",
-       " [5.0, 0.0, 1.0, 0.0, 53.0, 0.0, 6.0, 3.0, 0.0, 25.0],\n",
-       " [25.0, 0.0, 3.0, 6.0, 0.0, 53.0, 0.0, 1.0, 0.0, 5.0],\n",
-       " [2.0, 60.0, 55.0, 0.0, 7.0, 0.0, 54.0, 1.0, 0.0, 28.0]]"
+       "[[854.0,\n",
+       "  575.0,\n",
+       "  0.0,\n",
+       "  745.0,\n",
+       "  2117.0,\n",
+       "  0.0,\n",
+       "  2236.0,\n",
+       "  2303.0,\n",
+       "  2303.0,\n",
+       "  1637.0,\n",
+       "  1046.0],\n",
+       " [0.0, 341.0, 1481.0, 1475.0, 0.0, 95.0, 0.0, 0.0, 0.0, 115.0, 755.0],\n",
+       " [1143.0, 1387.0, 0.0, 0.0, 186.0, 0.0, 0.0, 0.0, 0.0, 147.0, 0.0],\n",
+       " [306.0, 0.0, 822.0, 83.0, 0.0, 2208.0, 67.0, 0.0, 0.0, 404.0, 502.0]]"
       ]
      },
      "execution_count": 4,
@@ -104,14 +121,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.62415431        -inf -2.7080502   1.28093385        -inf -0.76214005\n",
-      "         -inf  1.29928298  1.38629436 -2.01490302]\n",
-      " [-1.09861229        -inf -2.7080502         -inf  1.26224171        -inf\n",
-      "  -0.91629073 -1.60943791        -inf  0.51082562]\n",
-      " [ 0.51082562        -inf -1.60943791 -0.91629073        -inf  1.26224171\n",
-      "         -inf -2.7080502         -inf -1.09861229]\n",
-      " [-2.01490302  1.38629436  1.29928298        -inf -0.76214005        -inf\n",
-      "   1.28093385 -2.7080502         -inf  0.62415431]]\n"
+      "[[ 3.94257655e-01 -1.30349790e-03            -inf  2.57710680e-01\n",
+      "   1.30208173e+00            -inf  1.35677030e+00  1.38629436e+00\n",
+      "   1.38629436e+00  1.04494704e+00  5.97055106e-01]\n",
+      " [           -inf -5.23791061e-01  9.44799276e-01  9.40739730e-01\n",
+      "             -inf -1.80179665e+00            -inf            -inf\n",
+      "             -inf -1.61074141e+00  2.71044211e-01]\n",
+      " [ 6.85738125e-01  8.79224882e-01            -inf            -inf\n",
+      "  -1.12992686e+00            -inf            -inf            -inf\n",
+      "             -inf -1.36524095e+00            -inf]\n",
+      " [-6.32088437e-01            -inf  3.56066856e-01 -1.93683293e+00\n",
+      "             -inf  1.34416887e+00 -2.15098092e+00            -inf\n",
+      "             -inf -3.54258661e-01 -1.37073419e-01]]\n"
      ]
     },
     {
@@ -151,16 +172,19 @@
       "text/plain": [
        "[(0, 0),\n",
        " (0, 3),\n",
+       " (0, 4),\n",
+       " (0, 6),\n",
        " (0, 7),\n",
        " (0, 8),\n",
-       " (1, 4),\n",
-       " (1, 9),\n",
+       " (0, 9),\n",
+       " (0, 10),\n",
+       " (1, 2),\n",
+       " (1, 3),\n",
+       " (1, 10),\n",
        " (2, 0),\n",
-       " (2, 5),\n",
-       " (3, 1),\n",
+       " (2, 1),\n",
        " (3, 2),\n",
-       " (3, 6),\n",
-       " (3, 9)]"
+       " (3, 5)]"
       ]
      },
      "execution_count": 6,
@@ -186,7 +210,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['A', 'G'], ['T'], ['T'], ['A'], ['C'], ['G'], ['T'], ['A'], ['A'], ['C', 'T']]\n"
+      "[['A', 'G'], ['G'], ['C', 'T'], ['A', 'C'], ['A'], ['T'], ['A'], ['A'], ['A'], ['A'], ['A', 'C']]\n"
      ]
     }
    ],
@@ -226,7 +250,22 @@
     {
      "data": {
       "text/plain": [
-       "['ATTACGTAAC', 'GTTACGTAAC', 'ATTACGTAAT', 'GTTACGTAAT']"
+       "['AGCAATAAAAA',\n",
+       " 'GGCAATAAAAA',\n",
+       " 'AGTAATAAAAA',\n",
+       " 'GGTAATAAAAA',\n",
+       " 'AGCCATAAAAA',\n",
+       " 'GGCCATAAAAA',\n",
+       " 'AGTCATAAAAA',\n",
+       " 'GGTCATAAAAA',\n",
+       " 'AGCAATAAAAC',\n",
+       " 'GGCAATAAAAC',\n",
+       " 'AGTAATAAAAC',\n",
+       " 'GGTAATAAAAC',\n",
+       " 'AGCCATAAAAC',\n",
+       " 'GGCCATAAAAC',\n",
+       " 'AGTCATAAAAC',\n",
+       " 'GGTCATAAAAC']"
       ]
      },
      "execution_count": 9,
@@ -256,13 +295,6 @@
     "with open(buffer_file_path, \"wb\") as buff:\n",
     "    pickle.dump(W[word_length - 1], buff)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
