--- a/code/utility/Generate_words_by_motif.ipynb
+++ b/code/utility/Generate_words_by_motif.ipynb
@@ -22,7 +22,8 @@
    "source": [
     "import numpy as np\n",
     "import os\n",
-    "import pickle"
+    "import pickle\n",
+    "import json"
    ]
   },
   {
@@ -295,6 +296,13 @@
     "with open(buffer_file_path, \"wb\") as buff:\n",
     "    pickle.dump(W[word_length - 1], buff)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
