--- a/code/utility/Generate_words_by_motif.ipynb
+++ b/code/utility/Generate_words_by_motif.ipynb
@@ -22,8 +22,7 @@
    "source": [
     "import numpy as np\n",
     "import os\n",
-    "import pickle\n",
-    "import json"
+    "import pickle"
    ]
   },
   {
@@ -147,7 +146,7 @@
    ],
    "source": [
     "# Convert the 2D list into a matrix\n",
-    "hbpwm = np.matrix(pre_pwm)\n",
+    "pwm = np.matrix(pre_pwm)\n",
     "\n",
     "# Find the length of the words\n",
     "word_length = len(pre_pwm[0])\n",
@@ -159,8 +158,8 @@
     "b = total_obs/4\n",
     "\n",
     "# Transform the entries by taking log\n",
-    "log_hbpwm = np.log(hbpwm/b)\n",
-    "print(log_hbpwm)"
+    "log_pwm = np.log(pwm/b)\n",
+    "print(log_pwm)"
    ]
   },
   {
@@ -195,9 +194,9 @@
    ],
    "source": [
     "positive_entries = []\n",
-    "for i in range (log_hbpwm.shape[0]):\n",
-    "    for j in range(log_hbpwm.shape[1]):\n",
-    "        if log_hbpwm[i, j] > 0:\n",
+    "for i in range (log_pwm.shape[0]):\n",
+    "    for j in range(log_pwm.shape[1]):\n",
+    "        if log_pwm[i, j] > 0:\n",
     "            positive_entries.append((i, j))\n",
     "positive_entries"
    ]
